fix: add z index to collapsed menu

--- a/client/src/components/Login/LoginForm/LoginFormStyle.module.css
+++ b/client/src/components/Login/LoginForm/LoginFormStyle.module.css
@@ -8,13 +8,8 @@
   letter-spacing: 2px;
 }
 
-.Box p {
-  /* margin-bottom: 32px; */
-}
-
 .LeftContent {
   display: none;
-  /* width: 1280px; */
 }
 
 .RightContent {
